# lnp-forge

./: .config  .gitignore  COPYING  Makefile.in  README.md  SUPPORT  configure  configure.ac  fedora.spec  lnp-forge.in  steps.mk  version.sh
.github/workflows/: appimage.yml  build.yml  snap.yml
appimage/: AppImageBuilder.template.yml  com.bay12forums.linuxdwarfpack.appdata.xml  com.bay12forums.linuxdwarfpack.desktop  linux-dwarf-pack.sh  start_appimage.sh
config/: alpine.in  announcement.in  appimage.in  arch.in  backend.in  config.in  config.mk  configure.in  dark.in  debian.in  df.in  dfhack.in  embark.in  global.in  graphics.in  keybinds.in  legends.in  legends2.in  lnp.in  rpm.in  shared.in  snap.in  soundsense.in  soundsensers.in  therapist.in  tileset.in  toolchain.in
config/global/: ct-behave.in  paths.in
kconfig/: Makefile  mconf.c  nconf.c
m4/: ac_python_module.m4
patches/announcement/default/: 100-set-gamelog-settings.patch
patches/dfhack/0.42.05-alpha1/: 100-activate-twbt.patch  200-preload-zlib.patch  300-config-twbt.patch
patches/dfhack/0.42.06-alpha2/: 100-activate-twbt.patch  200-preload-zlib.patch  300-config-twbt.patch
patches/dfhack/0.42.06-beta1/: 200-preload-zlib.patch
patches/dfhack/0.42.06-r1/: 300-config-twbt.patch
patches/dfhack/0.43.03-r1/: 100-activate-twbt.patch
patches/dfhack/0.43.05-r3.1/: 200-git-describe.patch  300-config-twbt.patch
patches/dfhack/0.47.04-r1/: 100-activate-twbt.patch  300-config-twbt.patch
patches/dfhack/0.47.05-r1/: 100-activate-twbt.patch  200-activate-kloker.patch  400-rename-files-with-special-characters.patch
patches/dfhack/default/: 300-config-twbt.patch
patches/graphics/default/: 100-disable-meph-variety-override.patch
patches/kloker/default/: 100-fix-for-dfhack-47-05.patch  100-fix-includes.patch
patches/lnp/0.10f/: 100-df-dir.patch  200-i686-preload.patch  300-dfhack-config  400-startlnp-script.patch
patches/lnp/0.12a/: 200-i686-preload.patch  500-fix-gnome-terminal.patch
patches/lnp/0.13/: 100-transfer-twbt-art.patch  400-startlnp-script.patch
patches/lnp/default/: 100-df-dir.patch  200-fix-python3-terminal-handling.patch  200-force-python3.patch  300-dfhack-config.patch  400-startlnp-script.patch  500-config-kloker.patch  600-exc-info-message.patch
patches/soundsense-rs/default/: 200-webview_version.patch  300-fix-loading-total-volume.patch
patches/soundsense-rs/master/: 100-linuxpatch.patch  200-webview_version.patch
patches/therapist/default/: 100-is_transparent-my-ass.patch  100-start-local-binary.patch  200-ifstream-open.patch  300-start-local-binary.path
patches/therapist/v37.0.0/: 200-deactivate-doc-gen.patch
patches/twbt/default/: 100-twbt-cflags-fpermissive.patch
scripts/: functions  lnp-forge.sh.in  saveSample.sh
